@@ -24,6 +24,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
@@ -581,7 +582,7 @@ public class ProjectDescription extends ModelObject implements IProjectDescripti
 			return true;
 		}
 		// has natures changed?
-		if (!Set.of(natures).equals(Set.of(description.natures))) {
+		if (!new HashSet<>(Arrays.asList(natures)).equals(new HashSet<>(Arrays.asList(description.natures)))) {
 			return true;
 		}
 		// has buildspec changed?
